kitty terminal III

--- a/data/kitty/kitty.conf
+++ b/data/kitty/kitty.conf
@@ -3,6 +3,8 @@ include current-theme.conf
 font_size 16
 window_padding_width 4
 modify_font cell_height 100%
+enable_audio_bell no
+copy_on_select clipboard
 
 map f11 toggle_fullscreen
 
