virtualization stack change - VirtualBox to QEMU & libvirt

--- a/data/debian/install/preseed.cfg
+++ b/data/debian/install/preseed.cfg
@@ -30,7 +30,7 @@ d-i clock-setup/utc boolean true
 d-i clock-setup/ntp boolean true
 
 ### Disk (VirtualBox)
-d-i partman-auto/disk string /dev/nvme0n1
+d-i partman-auto/disk string /dev/vda
 d-i partman-auto/method string regular
 d-i partman-efi/non_efi_system boolean true
 d-i partman-auto/expert_recipe string \
@@ -74,7 +74,7 @@ popularity-contest popularity-contest/participate boolean false
 ### Grub
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i grub-installer/bootdev string /dev/nvme0n1
+d-i grub-installer/bootdev string /dev/vda
 d-i grub-installer/force-efi-extra-removable boolean true
 
 ### Post install script
