--- a/data/debian/install/preseed.cfg
+++ b/data/debian/install/preseed.cfg
@@ -29,28 +29,30 @@ d-i time/zone string UTC
 d-i clock-setup/utc boolean true
 d-i clock-setup/ntp boolean true
 
-### Disk (VirtualBox)
+### Disk (suitable for VMs only!)
 d-i partman-auto/disk string /dev/vda
 d-i partman-auto/method string regular
 d-i partman-efi/non_efi_system boolean true
+
+# this will setup only /dev/vda as partman-auto is very limited -> to setup other disks, use late_command below
 d-i partman-auto/expert_recipe string \
-  uefi-root :: \
-      512 512 512 fat32 \
-          $primary{ } \
-          $iflabel{ gpt } \
-          $reusemethod{ } \
-          method{ efi } \
-          format{ } \
-          mountpoint{ /boot/efi } \
-      . \
-      1 1 -1 ext4 \
-          $primary{ } \
-          method{ format } \
-          format{ } \
-          use_filesystem{ } \
-          filesystem{ ext4 } \
-          mountpoint{ / } \
-      .
+    uefi-boot :: \
+        512 512 512 fat32 \
+            $primary{ } \
+            $iflabel{ gpt } \
+            method{ efi } \
+            format{ } \
+            mountpoint{ /boot/efi } \
+        . \
+        1 1 -1 ext4 \
+            $primary{ } \
+            method{ format } \
+            format{ } \
+            use_filesystem{ } \
+            filesystem{ ext4 } \
+            mountpoint{ / } \
+        .
+
 d-i partman/choose_partition select finish
 d-i partman-basicfilesystems/no_swap boolean false
 d-i partman-partitioning/confirm_write_new_label boolean true
