--- a/data/debian/install/preseed.cfg
+++ b/data/debian/install/preseed.cfg
@@ -68,6 +68,8 @@ d-i apt-setup/non-free boolean true
 d-i apt-setup/contrib boolean true
 
 # package selection
+# IMPORTANT: openssh server will get installed even when it's not selected in this preseed!
+#            Machine will be automatically reachable after install.
 tasksel tasksel/first multiselect standard
 d-i pkgsel/include string
 d-i pkgsel/upgrade select none
